apps/it-tools/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: it-tools
  labels:
    app.kubernetes.io/name: it-tools
    app.kubernetes.io/instance: it-tools
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: it-tools
      app.kubernetes.io/instance: it-tools
  template:
    metadata:
      labels:
        app.kubernetes.io/name: it-tools
        app.kubernetes.io/instance: it-tools
    spec:
      containers:
        - name: it-tools
          image: corentinth/it-tools:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 128Mi
