apps/it-tools/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: it-tools
  labels:
    app.kubernetes.io/name: it-tools
    app.kubernetes.io/instance: it-tools
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "IT Tools"
    gethomepage.dev/group: "Applications"
    gethomepage.dev/icon: "it-tools"
    gethomepage.dev/href: "https://devtools.cyphers.app"
    gethomepage.dev/description: "Developer Utilities"
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: it-tools
    app.kubernetes.io/instance: it-tools
